2021-01-18 [1.42 Bld 190]

- Bugfix      : emit more reasonable error message when trying to
                convert multi-character constant resp. string of
                excessive length to integer
- Addition    : Z8000 Syntax extensions:
                - Add a few aliases for conditions
                - Add a few aliases for flag names
                - Allow Rn^ instead of @Rn for indirect addressing
                - for alternate (AMD) syntax, allow leaving away
                  indirection character for indirectly addressed I/O
- Bugfix      : repair NoICE debug output
- Addition    : add -supmode switch to enable supervisor mode
                right from the beginning

2021-01-10 [1.42 Bld 189]

- Bugfix      : correct encoding of Z8000 CALR instruction
- Bugfix      : string expansion was not done for names of structure
                elements
- Bugfix      : correct inclusion of bit symbols in nested structures
- Addition    : extend list of supported F8 variants
- Addition    : add option to define arrays of structures

2020-12-27 [1.42 Bld 188]

- Bugfix      : correct encoding of Z8000 EI/DI instruction
- Addition    : Add F3850 as target (contribution by Haruo Asano)
- Bugfix      : do not display line numbers in split byte notation

2020-12-25 [1.42 Bld 187]

- Bugfix      : add a couple of missing instructions and
                instruction/operand combinations to Z8000 target

2020-12-21 [1.42 Bld 186]

- Addition    : add -q(uiet) command line switch to PLIST and support
                multiple files
- Addition    : Support Z8000 as target
- Addition    : add -splitbyte command line switch

2020-12-09 [1.42 Bld 185]

- Addition    : Add compatibility mode switch for better compatibility
                with original assemblers on certain targets

2020-12-08 [1.42 Bld 184]

- Change      : Output generated by MESSAGE to console is suppressed
                in quiet mode
- Addition    : Add configurable maximum include nesting level