@@ -17,6 +17,8 @@ extern int FindInst(void *Field, int Size, int Count);
 extern Boolean IsIndirectGen(const char *Asc, const char *pBeginEnd);
 extern Boolean IsIndirect(const char *Asc);
 
+extern int FindDispBaseSplit(const char *pArg, int *pArgLen);
+
 extern void CodeEquate(ShortInt DestSeg, LargeInt Min, LargeInt Max);
 
 extern Boolean QualifyQuote_SingleQuoteConstant(const char *pStart, const char *pQuotePos);
