@@ -1,4 +1,6 @@
 	cpu	sc/mp
+	page	0
+	relaxed on
 
         lde
         xae
@@ -34,25 +36,36 @@
         dly	0x89
 
         xpal	pc
-        xpah	p2
+        xpah	p2		; it is valid to use just
+	xpah	2		; the register # instead of Pn
         xppc	p1
+	xppc	1
 
 	ld	e(pc)
         st	@e(p2)
+	st	@e(2)
         and	10(p1)
+	and	10(1)
         or	@-20(p3)
+	or	@-20(3)
         xor	vari
 vari:	dad	-30(p2)
+	dad	-30(2)
 	add	@40(p1)
+	add	@40(1)
+	add	@x'28'(p1)
+	add	@x'28(p1)
         cad	vari
 
 	jmp	vari
         jp	10(p2)
+	jp	10(2)
         jz	vari
         jnz	vari
 
         ild	vari
         dld	-5(p2)
+	dld	-5(2)
 
 ;        org     0xfff
 ;        ldi     0x20
