@@ -11,8 +11,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-const char *Version = "1.42 Beta [Bld 190]";
-const char *DebVersion = "1.42bld190-1";
+const char *Version = "1.42 Beta [Bld 191]";
+const char *DebVersion = "1.42bld191-1";
 LongInt VerNo = 0x142f;
 
 const char *InfoMessCopyright = "(C) 1992,2021 Alfred Arnold";
