@@ -1,3 +1,10 @@
+2021-01-21 [1.42 Bld 192]
+
+- Addition    : SC/MP: allow writing registers as 0..3 instead of P0..P3
+- Addition    : SC/MP: add x'... notation option for integer literals
+- Bugfix      : correct NoICE debug output
+- Bugfix      : corect cross reference list output
+
 2021-01-18 [1.42 Bld 190]
 
 - Bugfix      : emit more reasonable error message when trying to
